syntax = "proto3";

option go_package = "../api/pb;pb";

package cams.api.hub;

import "hub.proto";

// The service dedicated to the agents
// It is all about producing / uploading media streams
service Controller {
  // Stream of commands from the server to the client
  rpc Control(stream ControlReply) returns (stream ControlRequest) {}

  // Stream of media frames from the client to the server
  // There should be at most one long-standing call to MediaUpload per agent connected
  // to the cloud.
  rpc MediaUpload(stream MediaFrame) returns (None) {}
}

message ControlReply {
  RtspPlayNotify playing = 1;
}

message ControlRequest {
  RtspPlay play = 1;
  RtspPause pause = 2;
  RtspTeardown teardown = 3;
}

message RtspPlayNotify {
  string streamID = 1;
}

message RtspPlay {
  string streamID = 1;
}

message RtspPause {
  string streamID = 1;
}

message RtspTeardown {
  string streamID = 1;
}

enum MediaFrameType {
  FrameType_UNSPECIFIED = 0;
  FrameType_RTP = 1;
  FrameType_RTCP = 2;
}

message MediaFrame {
  MediaFrameType type = 2;
  bytes payload = 3;
}
